# axum-tokio-postgres-starter

./: Cargo.toml  Makefile
.github/workflows/: action.yaml  actions.yaml  audit.yaml  build.yaml  greeting.yaml  lint.yaml
config/: test.toml
configuration/: dev.toml
src/: config.rs  configurator.rs  error.rs  lib.rs  main.rs  state.rs  utils.rs
tests/: keycloak.rs  oidc_integration_tests.rs  static_files_tests.rs
tests/test_fallback_files/: index.html
tests/test_static_files/: index.html  test.txt
