[package]
name = "datastar-demo"
version = "0.1.0"
edition = "2024"

[lib]
name = "datastarlib"

[dependencies]
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["axum-0.8"] }
axum = { version = "0.8.7", features = ["http2"] }
axum-gate = "1.0.2"
axum-prometheus = "0.9.0"
base64 = "0.22.1"
byte-unit = {version="5.2.0", features = ["serde"]}
datastar = "0.3.1"
deadpool = "0.12.3"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
http = "1.3.1"
humantime = "2.3.0"
humantime-serde = "1.1.1"
mimalloc = "0.1.48"
regex = "1.12.2"
rustls = "0.23.35"
rustls-native-certs = "0.8.2"
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tokio-postgres-rustls = "0.13.0"
toml = {version="0.9.8", features = ["preserve_order"]}
tower = {version="0.5.2", features=["limit"]}
tower-http = { version = "0.6.6", features = ["trace", "limit", "cors", "compression-full", "decompression-full", "normalize-path","request-id","sensitive-headers"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = {version="0.3.20", features = ["env-filter","fmt","json","ansi"]}
uuid = {version="1.18.1", features = ["v7", "serde"]}
