[package]
name = "pictet-axum-service"
version = "0.1.0"
edition = "2024"
authors = ["Eric Methot <emethot@pictet.com>"]
description = "A library to simplify the use of Axum, Tokio and Postgres together."
license = "MIT"


[profile.release]
opt-level = 3
codegen-units = 4
strip = true
lto = true

[dependencies]
axum = { version = "0.8.7" }
axum-keycloak-auth = {version="0.8.3", features = ["rustls-tls"], optional=true}
axum-prometheus = "0.9.0"
base64 = "0.22.1"
byte-unit = {version="5.2.0", features = ["serde"]}
deadpool = {version="0.12.3", optional=true}
deadpool-postgres = {version="0.14.1", optional=true}
dotenvy = "0.15.7"
http = "1.4.0"
humantime = "2.3.0"
humantime-serde = "1.1.1"
mimalloc = "0.1.48"
regex = "1.12.2"
rustls = { version = "0.23.35", features = ["ring"], optional=true}
rustls-native-certs = {version="0.8.2", optional=true}
serde = {version="1.0.228", features = ["derive"]}
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = {version="0.7.15", optional=true}
tokio-postgres-rustls = { version = "0.13.0", optional=true }
toml = {version="0.9.8", features = ["preserve_order"]}
tower = {version="0.5.2", features=["limit"]}
tower-http = { version = "0.6.7", features = ["trace", "limit", "cors", "compression-full", "decompression-full", "normalize-path","request-id","sensitive-headers","fs"] }
tower-sessions = {version="0.14.0", features=["axum-core","memory-store"]}
tower_governor = "0.8.0"
tracing = "0.1.43"
tracing-error = "0.2.1"
tracing-subscriber = {version="0.3.22", features = ["env-filter","fmt","json","ansi"]}
url = "2.5.7"
uuid = {version="1.19.0", features = ["v7", "serde"]}

[dev-dependencies]
axum = { version = "0.8.4", features = ["macros"] }
keycloak = "26.4.0"
reqwest = "0.12"
testcontainers = "0.26.0"

[features]
default = ["postgres","keycloak","session"]
postgres = ["rustls", "dep:tokio-postgres", "dep:tokio-postgres-rustls","dep:deadpool", "dep:deadpool-postgres"]
rustls = ["dep:rustls", "dep:rustls-native-certs"]
keycloak = ["session","dep:axum-keycloak-auth"]
session = []
